2006-05-11  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-info-parser.c: 
	If the node isn't found while parsing, adjust the offset and
	try again (stupid broken info page workaround) bug #336838
	
	* src/yelp-info-parser.c: 
	Actually check a directory exists before reading it (bug #339978)
	
	* stylesheets/search2html.xsl: 
	* src/yelp-window.c: 
	* src/yelp-search-pager.c: 
	Improving basic search.  Does several things:
	- Make search box respond to "man <foo>", "man:<foo>" and "info:<foo>"
	by going directly to man / info page (both backends)
	- Only match whole words (basic)
	- when > 1 search term, reduce number of man / info results drastically
	- Tweaked result scoring
	 - Results matching > 1 term are given precedence
	- Allow > 1 search at a time (different windows)
	- Fix various bugs
	- New man page result parser that collects more results (bug #331831)
	Closes bug #339595
	
	* src/yelp-window.c: 
	Move all find code into a single function reducing
	lots of duplicate code	

2006-04-27  Brian Pepple  <bdpepple@gmail.com>

	* po/LINGUAS: New file listing all supported languages.
	* configure.in: Use po/LINGUAS instead of including all languages
	directly in this file. See the wiki for more information:
	http://live.gnome.org/GnomeGoals/PoLinguas

==================== 2.15.1 ====================

2006-04-23  Brent Smith  <gnome@nextreality.net>

	* NEWS:
	* configure.in:
	- Version 2.15.1

2006-04-23  Brent Smith  <gnome@nextreality.net>

	* src/yelp-toc-pager.c: (process_mandir_pending):
	Only write a mansect element when we have a non empty linked list of
	directories

2006-04-23  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	Don't print out whether or not beagle is available in the summary
	since there are instances where we don't even check, i.e.
	--with-search=no|basic
	* src/yelp-toc-pager.c: (create_toc_from_index):
	If we are unable to stat a directory in the cache file, remove it.

2006-04-22  Brent Smith  <gnome@nextreality.net>
